Fix: HabitMenu buttons no longer overflow the habit container

--- a/src/css/HabitMenu.module.css
+++ b/src/css/HabitMenu.module.css
@@ -7,21 +7,22 @@
 	width: 100%;
 	height: 100%;
 
-	/* backdrop-filter: grayscale(50%) brightness(0.75) blur(4px); */
-	background-color: var(--bg-color-primary);
+	display: flex;
+	align-items: center;
+
+	backdrop-filter: grayscale(50%) brightness(0.75) blur(4px);
 }
 
 /* list */
 .list {
-	/* outline: 1px solid green; */
-	position: absolute;
 	width: 100%;
-	top: 50%;
-	transform: translateY(-50%);
+	height: 100%;
 	padding: 0.6rem;
 
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-auto-rows: minmax(1.6rem, 3.2rem);
+	align-content: center;
 	gap: 0.4rem;
 }
 
@@ -36,8 +37,9 @@
 /* btn */
 .list button {
 	width: 100%;
-	height: 3.2rem;
+	height: 100%;
 	border-radius: 2rem;
 	justify-content: unset;
 	padding: 0 1.2rem;
+	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
 }
